--- a/resources/db.properties
+++ b/resources/db.properties
@@ -1,4 +1,4 @@
-CONNECTION_URL=jdbc://localhost:3306/ChatMulticanale
+CONNECTION_URL=jdbc:mysql://localhost:3306/chatmulticanale?allowPublicKeyRetrieval=true&useSSL=false
 LOGIN_USER=login
 LOGIN_PASS=login
 ADMINISTRATOR_USER=amministratore
