--- a/resources/db.properties
+++ b/resources/db.properties
@@ -1,7 +1,9 @@
 CONNECTION_URL=jdbc:mysql://localhost:3306/chatmulticanale?allowPublicKeyRetrieval=true&useSSL=false
 LOGIN_USER=login
-LOGIN_PASS=login
-ADMINISTRATOR_USER=amministratore
-ADMINISTRATOR_PASS=amministratore
-AGENZIA_USER=agenzia
-AGENZIA_PASS=agenzia
+LOGIN_PASS=11Db
+AMMINISTRATORE_USER=amministratore
+AMMINISTARTORE_PASS=08AmB
+CAPOPROGETTO_USER=capoprogetto
+CAPOPROGETTO_PASS=06Sa
+DIPENDENTE_USER=dipendente 
+DIPENDENTE_PASS=03Dr
